# digital-signal-processing

./: .gitignore  README.md  pyproject.toml
data/: gains.json  gains_clip_5.json
digital_signal_processing/: commands.py  equalizer.py  metrics.py  reverberation.py  utils.py
screenshots_ivan/: README.md
