[tool.poetry]
name = "digital-signal-processing"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
torch = "2.1.2"
torchmetrics = "^0.11.4"
soundfile = "^0.12.1"
scipy = "^1.11.4"
fire = "^0.5.0"
tqdm = "^4.66.1"
librosa = "^0.10.1"
tabulate = "^0.9.0"
pesq = "^0.0.4"
speechmos = "^0.0.1.1"
onnxruntime = "^1.16.3"
asteroid = "^0.7.0"

[tool.poetry.scripts]
sound = "digital_signal_processing.commands:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
